--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,12 @@
     padding-left: 20px;
     padding-right: 20px;
    }
+   .slider-wrapper{
+    margin: 0 auto;
+    }
+    .slide h3{
+        font-size: 20px;
+    }
    .h2{
     position: absolute;
     left: 42%;
@@ -83,6 +89,20 @@
         padding-bottom: 100px;
         
     }
+    .registration-form{
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 80%;
+    }
+    .img-div{
+        margin-top: 5px;
+    }
+    .slider-wrapper{
+        margin: 0 auto;
+        }
+    .slide h3{
+        font-size: 20px;
+    }
 
 }
 @media(max-width:580px){
@@ -145,8 +165,24 @@
         padding-bottom: 100px;
         
     }
-}
-@media(max-width:320px){
+    .form-heading{
+        font-size: 20px;
+    }
+    .input {
+        font-size: 12px;
+    }
+    .send-button {
+        font-size: 12px;
+    }
+    .slider-wrapper{
+        margin: 0 auto;
+        }
+    .slide h3{
+        font-size: 15px;
+    }
+    
+
+@media(max-width:320px){}
     .logo-div{
         font-size: 15px;
         left: 2px;
@@ -174,6 +210,9 @@
     .footer-bg{
         flex-wrap: wrap;
         justify-content: center;
+    }
+    .footer-bg1{
+        padding-left: 50px;
     }
     .logo-div1{
         font-size: 15px;
@@ -206,11 +245,52 @@
         width: 250px;
         top: 45%;
         font-size: 15px;
-       }
+    }
     .nav-li1{
         font-size: 15px;
     }
     .social-icons{
         font-size: 25px;
     }
+    .registration-form{
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 80%;
+    }
+    .input {
+        max-width: 400px;
+        width: 100%;
+        height: 20px;
+    }
+    .send-button {
+        max-width: 400px;
+        width: 100%;
+        height: 20px;
+    }
+    .img-div{
+        margin-top: 0px;
+        margin: 0 auto;
+    
+    }
+    .form-heading{
+        font-size: 15px;
+    }
+    .input-check{
+        font-size: 12px;
+    }
+    .form{
+        margin-left: 50px;
+        margin-bottom: 25px;
+        margin: 0 auto;
+    }
+    .image{
+        height: 400px;
+    }
+    .slider-wrapper{
+        margin: 0 auto;
+        }
+    .slide h3{
+        font-size: 12px;
+    }
+    
 }
