--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     height: 40px;
     color: #F9E7E7;  
 }
-/* .body{
-    margin-top:  180px;
-} */
 .logo-h{
     font-size: 25px;
 }
@@ -528,18 +525,20 @@ a:hover::after {
     margin:0 auto;
     position: relative;
     overflow: hidden;
+    margin:0 auto;
 }
 .slide-ana{
     height: 100%;
 }
 .slide-ana div{
     width:100%;
-    height: 100%;
+    height: 500px;
     position: absolute;
     transition: all 1s;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    margin-top: 100px;
 }
 .slider span{
     height: 50px;
@@ -552,7 +551,7 @@ a:hover::after {
     text-align: center;
     cursor: pointer;
     transition: all 0.2s linear;
-    border-radius: 50px;
+    border-radius: 20px;
 }
 .slider span:hover{
     background-color: #E7D3DD;
@@ -564,6 +563,7 @@ a:hover::after {
     text-align: center;
     cursor: pointer;
     padding: 0 20px;
+    right: 2%;
     transition: all 0.2s linear;
 }
 .slide-ana{
