--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,6 +40,9 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+    .title{
+        font-size: 15px;
+    }
 }   
 @media(max-width:863px){
     .navigation{
@@ -129,6 +132,18 @@
     .footer-social-icons1{
         margin-top: 50px;
     }
+    .title {
+        right: 80px;
+        font-size: 30px;
+        width: 250px;
+    }
+    .title{
+        font-size: 15px;
+    }
+    .slide-ana div{
+        width:100%;
+        height: 400px;
+    }
     
 }
 @media(max-width:580px){
@@ -204,7 +219,8 @@
         margin: 0 auto;
         }
     .slide h3{
-        font-size: 15px;
+        font-size: 20px;
+        width: 20px;
     }
     #ul-list {
         flex-wrap: wrap;
@@ -225,6 +241,13 @@
     }
     .footer-social-icons1{
         margin-top: 50px;
+    }
+    .title{
+        font-size: 10px;
+    }
+    .slide-ana div{
+        width:100%;
+        height: 300px;
     }
     
     
@@ -342,4 +365,13 @@
     .footer-social-icons1{
         margin-top: 20px;
     }
+    .title{
+        font-size: 15px;
+    }
+    .slide-ana div{
+        width:100%;
+        height: 280px;
+        margin-bottom: 2px;
+    }
+    
 }
