--- a/css/style.css
+++ b/css/style.css
@@ -222,9 +222,10 @@ a:hover::after {
 }
 .slide h3{
     position: absolute;
-    top: 30%;
-    left: 70%;
-    font-size: 30px;
+    top: 50%;
+    left: 66%;
+    font-size: 25px;
+    width: 200px;
     font-weight: 800;
     font-family: 'ALK Life';
     color: white;
@@ -272,14 +273,14 @@ a:hover::after {
 .dot {
     width: 20px;
     height: 20px;
-    background-color:white;
+    background-color:#BA7280;
     border-radius: 50%;
     margin: 10px;
     cursor: pointer;
 
 }
 .activeDot {
-    border:2px solid #BA7280 ;
+    border:2px solid brown ;
 }
 .img-slider {
     width: 100%;
@@ -553,7 +554,7 @@ a:hover::after {
     text-align: center;
     cursor: pointer;
     transition: all 0.2s linear;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 .slider span:hover{
     background-color: #E7D3DD;
