--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,19 @@
 @media(max-width:1024px){
+    .navigation{
+        display: none;
+    }
+    .burger-menu{
+        display: block;
+        top: 40%;
+        right: 5%;
+        font-size: 50px;
+    }
+    .ul{
+       justify-content: center;
+       align-items: center;
+       flex-direction: column;
+       margin-top: 20px;
+    }
     .nav-li{
      font-size: 20px;
     }
@@ -54,11 +69,18 @@
          right: 5%;
          font-size: 50px;
      }
+     .ul{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 20px;
+     }
      .h3{
          font-size: 20px;
      }
      .nav-li{
          font-size: 15px;
+         margin-top: 10px;
      }
      .footer-bg1{
          margin-right: 30px;
@@ -146,6 +168,41 @@
      }
      
  }
+ @media(max-width:733px){
+    .footer-bg{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+ }
+ @media(max-width:606px){
+    .contact-section-div{
+        flex-wrap: wrap;
+    }
+    .map{
+        max-width: 450px;
+        width: 100%;
+        padding-top: 100px;
+        padding-left: 28px;
+    }
+    .list1{
+        font-size: 12px;
+    }
+    .footer-bg{
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+    .title{
+        font-size: 12px;
+    }
+    .slide-ana div{
+            width:100%;
+            height: 500px;
+    }
+    .form{
+        margin-top: 10px;
+    }
+ }
  @media(max-width:580px){
      .logo-div{
          font-size: 20px;
@@ -171,6 +228,7 @@
      }
      .footer-bg{
          flex-wrap: wrap;
+         justify-content: center;
      }
      .about-us-div{
          flex-wrap: wrap;
@@ -247,7 +305,7 @@
      }
      .slide-ana div{
          width:100%;
-         height: 300px;
+         height: 500px;
      }
      
      
@@ -278,8 +336,8 @@
          padding-right: 25px;
      }
      .footer-bg{
-         flex-wrap: wrap;
-         justify-content: center;
+        flex-direction: column;
+        align-items: center;
      }
      .footer-bg1{
          padding-left: 50px;
