--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* header */
 .logo{
     width: 40px;
     height: 40px;
@@ -32,7 +33,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    
 }
 .nav-li{
     margin-right: 20px;
@@ -118,6 +118,30 @@
 a:hover::after {
     width: 85%;
 }
+/* .search-form{
+    margin-top: 20px;
+    margin-right: 20px;
+    width: 20px;
+    height: 20px;
+}
+.search{
+    display: none;
+    color: white
+}
+.search.input{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 200px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: block;
+} */
+
+
 
 /* footer */
 .footer{
@@ -523,13 +547,17 @@ a:hover::after {
     height: 50px;
     position: absolute;
     top:50%;
-    /* margin:-25px 0 0 0;
-    background-color: rgba(0, 0, 0, 0.4); */
-    color:#BA7280;
+    margin:-25px 0 0 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    color:#fff;
+    line-height: 50px;
     text-align: center;
     cursor: pointer;
     transition: all 0.2s linear;
     /* border-radius: 20px; */
+}
+.slider span:hover{
+    background-color: #E7D3DD;
 }
 .title{
     top:80% !important;
@@ -540,9 +568,6 @@ a:hover::after {
     padding: 0 20px;
     right: 2%;
     transition: all 0.2s linear;
-}
-.title:hover{
-    color: brown;
 }
 .slide-ana{
     font-size: 30px;
